--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,7 +222,7 @@ section{
      height: 100%;
      width: 100%;
      border-radius: 24px;
-     background-image: url('https://drive.google.com/uc?export=view&id=1GQxScexeRU92Q0JSrZIGY68CkJM0zSVt');
+     background-image: url('https://onedrive.live.com/embed?resid=55A8F5F6F40759DA%21105051&authkey=%21ALZTP8tiyusv5QQ&height=660');
      border: 1px solid rgba(0, 0, 0, 0.151);
      filter: opacity(.85) contrast(150%);
 }
@@ -313,14 +313,14 @@ section{
 }
 
 .ada{
-    background-image: url('https://drive.google.com/uc?export=view&id=1GQxScexeRU92Q0JSrZIGY68CkJM0zSVt');
+    background-image: url('https://onedrive.live.com/embed?resid=55A8F5F6F40759DA%21105051&authkey=%21ALZTP8tiyusv5QQ&height=660');
     
 }
 .Margaret-Hamilton{
-    background-image: url('https://drive.google.com/uc?export=view&id=1xxk-BXl3SDkGRFc4LS4nlWTkftlWOjXt');
+    background-image: url('https://onedrive.live.com/embed?resid=55A8F5F6F40759DA%21105066&authkey=%21AJB2oJXaexH7TuE&height=256');
 }
 .Susan-Kare{
-    background-image: url('https://drive.google.com/uc?export=view&id=1cgSpvqsKJ4AJ2D29nDML71jlva_NFz2u');
+    background-image: url('https://onedrive.live.com/embed?resid=55A8F5F6F40759DA%21105064&authkey=%21AEU7XvXfVz29Y6k&width=256');
 }
 .topics-section{
     margin: 72px 0;
